--- a/files/views/index.html
+++ b/files/views/index.html
@@ -7,14 +7,15 @@
   <title>Hello Hexan</title>
 
   <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="/files/css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
 
   <div class="d-flex justify-content-center align-items-center mt-4">
-    <div class="" style="width: 450px;background: #eaeaea;height: 400px;border-radius: 5px;">
+    <div class="c-main">
 
-      <div class="d-flex flex-row-reverse align-items-center" style="background: #8c8f93;">
+      <div class="d-flex flex-row-reverse align-items-center c-top">
         <div class="p-2">
           <button onclick="closeApp()" type="button" class="btn" name="button">close</button>
         </div>
